syntax = "proto3";

package pokemon;

import "enums.proto";


message Pokemon {
    enums.SpeciesEnum species = 1;
    enums.ItemsEnum item = 2;
    enums.AbilitiesEnum ability = 3;
    enums.MovesEnum moveId0 = 4;
    enums.MovesEnum moveId1 = 5;
    enums.MovesEnum moveId2 = 6;
    enums.MovesEnum moveId3 = 7;
    int32 ppUsed0 = 8;
    int32 ppUsed1 = 9;
    int32 ppUsed2 = 10;
    int32 ppUsed3 = 11;
    bool active = 12;
    bool fainted = 13;
    int32 level = 14;
    enums.GendersEnum gender = 15;
    enums.ItemeffectEnum itemEffect = 16;
    int32 hp = 17;
    int32 maxHp = 18;
    enums.StatusesEnum status = 19;
}
